@@ -1,3 +1,12 @@
+2013-06-19  Tom Tromey  <tromey@redhat.com>
+
+	* net/eww.el (eww-top-url): Remove.
+	(eww-home-url, eww-start-url, eww-contents-url): New defvars.
+	(eww-render): Set new variables.  Don't set eww-top-url.
+	(eww-handle-link): Handle "prev", "home", and "contents".
+	Downcase the rel text.
+	(eww-top-url): Choose best top URL.
+
 2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* eww.el: Rewrite to implement form elements "by hand" instead of
